fix powur-selects on Safari

--- a/app/assets/stylesheets/new/library.scss
+++ b/app/assets/stylesheets/new/library.scss
@@ -30,6 +30,7 @@
       position:absolute;
       display:inline-flex;
       float: left;
+      left: 75px;
     }
 
   }
